<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentColor"
    tools:context=".ScoreFragment">

    <TextView
        android:id="@+id/textview_final_score_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_intro_text"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/textview_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_placeholder_text"
        android:textColor="@color/black"
        android:textSize="@dimen/score_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_final_score_intro"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textview_score_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_placeholder_text"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_score"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/button_take_new_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/next_button_margin_bottom"
        android:background="@color/primaryColor"
        android:text="@string/button_quiz_try_again_label"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_score_message" />
</androidx.constraintlayout.widget.ConstraintLayout>
