<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accentColor"
    tools:context=".QuestionTwoFragment">

    <TextView
        android:id="@+id/textview_question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textview_question_margin_bottom"
        android:layout_weight="1"
        android:text="@string/question_placeholder_text"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/title_size" />

    <CheckBox
        android:id="@+id/checkBox_question_2_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/secondaryColor"
        android:backgroundTint="@color/accentColor"
        android:textSize="@dimen/checkbox_text_size"
        android:text="@string/option_placeholder_text"/>

    <CheckBox
        android:id="@+id/checkBox_question_2_option_2"
        android:layout_marginTop="@dimen/option_gap_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/secondaryColor"
        android:backgroundTint="@color/accentColor"
        android:textSize="@dimen/checkbox_text_size"
        android:text="@string/option_placeholder_text" />

    <CheckBox
        android:id="@+id/checkBox_question_2_option_3"
        android:layout_marginTop="@dimen/option_gap_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/secondaryColor"
        android:backgroundTint="@color/accentColor"
        android:textSize="@dimen/checkbox_text_size"
        android:text="@string/option_placeholder_text" />

    <CheckBox
        android:id="@+id/checkBox_question_2_option_4"
        android:layout_marginTop="@dimen/option_gap_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/secondaryColor"
        android:backgroundTint="@color/accentColor"
        android:textSize="@dimen/checkbox_text_size"
        android:text="@string/option_placeholder_text" />

    <Button
        android:id="@+id/button_question_3_next"
        android:layout_marginTop="@dimen/next_button_margin_bottom"
        android:layout_marginBottom="@dimen/next_button_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_linear_layout_next_text_size"
        android:layout_weight="1"
        android:background="@color/primaryColor"
        android:textSize="@dimen/checkbox_text_size"
        android:text="@string/next_question"
        app:backgroundTint="@null"/>
</LinearLayout>
